# auto-marketing

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: default.yaml
data/: SOURCES.md
data/market/: AAPL.b161209b4b434956b88063c213d05bb0.parquet  AAPL.json  AMZN.af16c17f6c104b09b1695e37e865e263.parquet  AMZN.json  GOOGL.1154a8595e954d07b8c24746c3a30914.parquet  GOOGL.json  IWM.a87b0bc495134e78bd928409d4f155e0.parquet  IWM.json  META.9d48da6c0a8740f993d87c86df8c0244.parquet  META.json  MSFT.ef161463289845069627f79032b113ca.parquet  MSFT.json  NVDA.8332f203eda84bb28910474288d183db.parquet  NVDA.json  QQQ.ac30db7f13cf4f4c842715eb7c8a3ea0.parquet  QQQ.json  SPY.f243cd5222a94806b5256dc51a14288b.parquet  SPY.json
docs/superpowers/plans/: 2026-07-17-llm-quant-paper-trading-implementation.md  2026-07-17-local-market-snapshot-implementation.md  2026-07-18-alpha-arena-implementation.md  2026-07-18-codex-reviewer-implementation.md  2026-07-18-experiment-kernel-implementation.md  2026-07-18-finmem-implementation.md  2026-07-18-paper-strategies-mvp-implementation.md  2026-07-18-quanta-alpha-implementation.md  2026-07-18-runtime-agent-dashboard-implementation.md  2026-07-18-trading-agents-mvp-implementation.md
src/quant_trader/: __init__.py  __main__.py  backtest.py  cli.py  config.py  dashboard.py  dashboard_template.py  execution.py  paper.py  report.py  state.py  validation.py  web.py  web_template.py
tests/integration/: test_paper_experiments.py  test_paper_mvp.py
tests/unit/: test_cli.py  test_config.py  test_dashboard.py  test_web.py
(+81 files in other folders)
